Deployments/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eshopping-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api-local.eshopping.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ocelotapigw
                port:
                  number: 80
